user crud operations done

--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -48,3 +48,8 @@ td span {
 #role {
   text-transform: capitalize;
 }
+.aboveTable {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
